<resources>
    <string name="app_name">AhaSee</string>
    <string name="action_settings">Settings</string>
    <string name="app_package">com.adaptivehandyapps.app</string>

    <string name="start_activity">Launching activity.</string>

    <!-- file system -->
    <string name="espi_feed_dir">ElectricUtilityFeed</string>
    <string name="custom_baseline_dir">CustomBaselines</string>

    <!-- tab titles -->
    <string name="title_activity_see">SEE</string>
    <string name="title_section1">Summarize</string>
    <string name="title_section2">Baseline</string>
    <string name="title_section3">Compare</string>

    <!-- chart types-->
    <string name="chart_type_area">Area</string>
    <string name="chart_type_line">Line</string>
    <string name="chart_type_bar">Bar</string>
    <string name="chart_type_pie">Pie</string>
    <string name="chart_type_donut">Donut</string>

    <!-- summarize text -->

    <string name="summarize_button_refresh">"Refresh GB"</string>
    <string name="summarize_button_remove">"Remove GB"</string>
    <string name="summarize_gb_all">"All "</string>
    <string name="summarize_gb_latest">"Most Recent "</string>

    <string name="total_year_label_kwh">"Total KwH Last Year (2014)"</string>
    <string name="total_year_label_dollar">"Total $$$ Last Year (2014)"</string>
    <string name="rolling_year_label_kwh">"Rolling 12 Mo Total KwH "</string>
    <string name="rolling_year_label_dollar">"Rolling 12 Mo Total $$$ "</string>

    <string name="total_avemo_label_kwh">"Average KwH Month (2014)"</string>
    <string name="total_avemo_label_dollar">"Average $$$ Month (2014)"</string>
    <string name="rolling_avemo_label_kwh">"Rolling 12 Mo Average KwH "</string>
    <string name="rolling_avemo_label_dollar">"Rolling 12 Mo Average $$$ "</string>

    <string name="rolling_peakmo_label_kwh">"Rolling 12 Mo Peak KwH "</string>
    <string name="rolling_peakmo_label_dollar">"Rolling 12 Mo Peak $$$ "</string>
    <string name="rolling_lowmo_label_kwh">"Rolling 12 Mo Low KwH "</string>
    <string name="rolling_lowmo_label_dollar">"Rolling 12 Mo Low $$$ "</string>

    <string name="lastmo_label_kwh">"Last Month Delta KwH "</string>
    <string name="lastmo_label_dollar">"Last Month Delta $$$ "</string>

    <!-- baseline away/home text -->
    <string name="away_match_text">"Typical Away Match"</string>
    <string name="away_mismatch_text">"Typical Away Mis-Match"</string>
    <string name="home_match_text">"Typical Home Match"</string>
    <string name="home_mismatch_text">"Typical Home Mis-Match"</string>

    <string name="typical_away_text">"Typical Away"</string>
    <string name="typical_home_text">"Typical Home"</string>

    <string name="alert_away_title">"Alert for Away Watts"</string>
    <string name="alert_home_title">"Alert for Home Watts"</string>
    <string name="typical_away_title">"Typical Away Watts"</string>
    <string name="typical_home_title">"Typical Home Watts"</string>

    <!-- baseline text -->

    <string name="baseline_button_show_analysis">"Generate Baseline"</string>
    <string name="baseline_button_save_baseline">"Save As Baseline"</string>
    <string name="baseline_button_show_baseline">"Cycle Baselines"</string>
    <string name="baseline_algo_label">"Algorithm"</string>
    <string name="baseline_days_label">"# Days"</string>

    <string name="baseline_algo_none">"Raw"</string>
    <string name="baseline_algo_average">"Average"</string>
    <string name="baseline_algo_mid">"Middle"</string>
    <string name="baseline_algo_max">"Max"</string>
    <string name="baseline_algo_min">"Min"</string>

    <string name="total_day_label">"Total KwH for Day"</string>
    <string name="ave_day_label">"Average Kwh Hour"</string>
    <string name="peak_day_label">"Peak Kwh Hour"</string>
    <string name="low_day_label">"Low KwH Hour"</string>

    <!-- compare -->
    <string name="compare_column1_label">"Metric Units"</string>
    <string name="compare_column2_label">"Baseline"</string>
    <string name="compare_column3_label">"Current"</string>

    <string name="view_next_button_text">Next Day</string>
    <string name="view_prev_button_text">Previous Day</string>
    <string name="button_next_baseline">"Cycle Baselines"</string>

    <!-- achartdemo -->

    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>


</resources>
